# LoTest

./: README.md  pom.xml
src/main/java/com/lotest/sodiumpaper/: FeatureCatalog.java  FeatureDefinition.java  OptimizationStats.java  OptimizationTask.java  SodiumCommand.java  SodiumPaperPlugin.java
src/main/java/com/lotest/useless100/: FeatureRegistry.java  Useless100Plugin.java  UselessCommand.java  UselessFeature.java
src/main/java/com/lotest/useless100/features/: Feature001.java  Feature002.java  Feature003.java  Feature004.java  Feature005.java  Feature006.java  Feature007.java  Feature008.java  Feature009.java  Feature010.java  Feature011.java  Feature012.java  Feature013.java  Feature014.java  Feature015.java  Feature016.java  Feature017.java  Feature018.java  Feature019.java  Feature020.java  Feature021.java  Feature022.java  Feature023.java  Feature024.java  Feature025.java  Feature026.java  Feature027.java  Feature028.java  Feature029.java  Feature030.java  Feature031.java  Feature032.java  Feature033.java  Feature034.java  Feature035.java  Feature036.java  Feature037.java  Feature038.java  Feature039.java  Feature040.java  (+60 more)
src/main/resources/: config.yml  plugin.yml
tabos/: config.js  manifest.json  sw.js
tabos/content/: media.js  reduceMotion.js
tabos/modules/: burner.js  dnr.js  snapshot.js  tabs.js
tabos/rules/: trackers.json
tabos/sidepanel/: panel.css  panel.html  panel.js
webcraft_cpp/: .gitignore  CMakeLists.txt  README.md
webcraft_cpp/src/: VoxelWorld.cpp  VoxelWorld.h  main.cpp
